# rml

./: .gitignore  Cargo.toml  expanded.rs  rust-toolchain  rust-toolchain.toml  rustfmt.toml
crates/cargo-rml/: Cargo.toml
crates/cargo-rml/src/: options.rs
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/ghost-example/: Cargo.toml
crates/ghost-example/src/: main.rs
crates/rml/: Cargo.toml
crates/rml-contracts/: Cargo.toml
crates/rml-contracts/src/: ghost.rs  lib.rs  logic.rs  model.rs  snapshot.rs  std.rs  well_founded.rs
crates/rml-contracts/src/logic/: int.rs  locset.rs  ops.rs  ord.rs  seq.rs
crates/rml-contracts/src/std/: array.rs  cmp.rs  num.rs  ops.rs  vec.rs
crates/rml-proc/: Cargo.toml
crates/rml-proc-dummy/: Cargo.toml
crates/rml-proc-dummy/src/: lib.rs
crates/rml-proc/src/: extern_spec.rs  func.rs  item_inv.rs  lib.rs  loop_inv.rs  subject.rs  util.rs
crates/rml-syn/: Cargo.toml
crates/rml-syn/src/: attrs.rs  extern_spec.rs  lib.rs  locset.rs  macros.rs  pat.rs  print.rs  spec.rs  subject.rs  term.rs  visit.rs  visit_mut.rs
crates/rml-syn/src/extern_spec/: parsing.rs  printing.rs
crates/rml-syn/src/locset/: display.rs  encoding.rs  parsing.rs  print.rs  printing.rs
crates/rml-syn/src/pat/: display.rs  encoding.rs  parsing.rs  printing.rs
crates/rml-syn/src/spec/: validation.rs
crates/rml-syn/src/term/: display.rs  encoding.rs  parsing.rs  printing.rs
crates/rml/src/: callbacks.rs  check.rs  ctx.rs  error.rs  ghost.rs  hir.rs  lib.rs  locset.rs  snapshot.rs  spec.rs  suppress_borrowck.rs  term.rs  util.rs
crates/rml/src/check/: logic_calls.rs  purity.rs
crates/rml/src/hir/: conversion.rs  expr.rs  item.rs  pat.rs  stmt.rs  ty.rs  type_extract.rs  visit.rs
crates/rml/src/locset/: translation.rs
crates/rml/src/spec/: hir.rs  serialize.rs
crates/rml/src/term/: serialize.rs  translation.rs  wrappers.rs
