[package]
name = "cargo-rml"
authors = ["Daniel Drodt <daniel.drodt@tu-darmstadt.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.9", features = ["derive", "env"] }
env_logger = "0.10.0"
rml = { path = "../../rml" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
toml = "0.7.5"
