[package]
name = "cargo-rml"
authors = ["Daniel Drodt <daniel.drodt@tu-darmstadt.de>"]
version = "0.1.0"
edition = "2024"
description = "A Cargo extension to extract RML and check specifications."

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
env_logger = "0.11.8"
rml = { path = "../rml" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"

[package.metadata.rust-analyzer]
rustc_private = true
