[package]
name = "rml-contracts"
authors = ["Daniel Drodt <daniel.drodt@tu-darmstadt.de>"]
version = "0.1.0"
edition = "2024"

[dependencies]
rml-proc = { path = "../rml-proc" }
rml-proc-dummy = { path = "../rml-proc-dummy" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rml)', 'cfg(doc_cfg)'] }
